@@ -228,3 +228,24 @@ def update_project_advisory_type(context):
             p_count += 1
 
     logger.info('Updated advisory type for %s projects' % p_count)
+
+
+def reindex_digibib_containers(context):
+    portal_url = getToolByName(context, 'portal_url')
+    portal = portal_url.getPortalObject()
+    digibib = getattr(portal, 'digibib')
+    if not digibib:
+        logger.warn("No digibib")
+        return
+    projects = getattr(digibib, 'projects')
+    if not projects:
+        logger.warn("No digibib projects container")
+    else:
+        projects.reindexObject()
+        logger.info("Digibib projects container reindexed.")
+    meetings = getattr(digibib, 'meetings')
+    if not meetings:
+        logger.warn("No digibib meetings container")
+    else:
+        meetings.reindexObject()
+        logger.info("Digibib meetings container reindexed.")
